Fix bundle script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"build": "node scripts/buildNumber.cjs release false && tauri build",
 		"build:alpha": "node scripts/buildNumber.cjs alpha false && tauri build",
 		"build:beta": "node scripts/buildNumber.cjs beta false && tauri build",
-		"build:bundle": "node scripts/buildNumber.cjs alpha false && node scripts/build.js",
+		"build:bundle": "node scripts/build.js",
 		"check": "svelte-check && tsc --noEmit && eslint ."
 	},
 	"devDependencies": {
