--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "authme",
-	"version": "4.0.2",
+	"version": "4.0.3",
 	"description": "Simple cross-platform two-factor (2FA) authenticator app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -18,33 +18,33 @@
 		"check": "svelte-check && tsc --noEmit && eslint ."
 	},
 	"devDependencies": {
+		"@baileyherbert/tinro": "^1.0.0",
 		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
 		"@esbuild-plugins/node-modules-polyfill": "^0.1.4",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tauri-apps/api": "^1.2.0",
-		"@tauri-apps/cli": "^1.2.2",
+		"@tauri-apps/cli": "^1.2.3",
 		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.48.1",
-		"@typescript-eslint/parser": "^5.48.1",
+		"@typescript-eslint/eslint-plugin": "^5.49.0",
+		"@typescript-eslint/parser": "^5.49.0",
 		"autoprefixer": "^10.4.13",
 		"esbuild": "^0.15.16",
 		"esbuild-style-plugin": "^1.6.1",
 		"esbuild-svelte": "^0.7.3",
-		"eslint": "^8.31.0",
+		"eslint": "^8.32.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-svelte": "^2.14.1",
+		"eslint-plugin-svelte": "^2.15.0",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.2",
+		"prettier": "^2.8.3",
 		"prettier-plugin-tailwindcss": "^0.2.1",
-		"svelte": "^3.55.0",
-		"svelte-check": "^3.0.2",
-		"svelte-preprocess": "^5.0.0",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.3",
+		"svelte-preprocess": "^5.0.1",
 		"tailwindcss": "^3.2.4",
-		"tinro": "^0.6.12",
 		"typescript": "^4.9.4"
 	},
 	"dependencies": {
@@ -52,6 +52,6 @@
 		"protocol-buffers": "^5.0.0",
 		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4",
-		"ua-parser-js": "^1.0.2"
+		"ua-parser-js": "^1.0.33"
 	}
 }
