--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "authme",
-	"version": "4.0.3",
+	"version": "4.1.0",
 	"description": "Simple cross-platform two-factor (2FA) authenticator app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -25,29 +25,33 @@
 		"@tailwindcss/forms": "^0.5.3",
 		"@tauri-apps/api": "^1.2.0",
 		"@tauri-apps/cli": "^1.2.3",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.49.0",
-		"@typescript-eslint/parser": "^5.49.0",
+		"@types/node": "^18.14.6",
+		"@typescript-eslint/eslint-plugin": "^5.54.0",
+		"@typescript-eslint/parser": "^5.54.0",
 		"autoprefixer": "^10.4.13",
 		"esbuild": "^0.15.16",
+		"esbuild-plugin-copy": "^2.0.2",
+		"esbuild-plugin-replace": "^1.3.0",
 		"esbuild-style-plugin": "^1.6.1",
 		"esbuild-svelte": "^0.7.3",
-		"eslint": "^8.32.0",
+		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-svelte": "^2.15.0",
+		"eslint-plugin-svelte": "^2.19.2",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.3",
-		"prettier-plugin-tailwindcss": "^0.2.1",
+		"prettier": "^2.8.4",
+		"prettier-plugin-tailwindcss": "^0.2.4",
 		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
+		"svelte-check": "^3.0.4",
 		"svelte-preprocess": "^5.0.1",
-		"tailwindcss": "^3.2.4",
-		"typescript": "^4.9.4"
+		"tailwindcss": "^3.2.7",
+		"typescript": "^4.9.5"
 	},
 	"dependencies": {
+		"@undecaf/barcode-detector-polyfill": "^0.9.15",
+		"@undecaf/zbar-wasm": "^0.9.12",
 		"otpauth": "^8.0.3",
 		"protocol-buffers": "^5.0.0",
 		"qrcode-decoder": "^0.2.2",
