--- a/package.json
+++ b/package.json
@@ -35,17 +35,18 @@
 		"esbuild-style-plugin": "^1.6.1",
 		"esbuild-svelte": "^0.7.3",
 		"eslint": "^8.35.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-prettier": "^8.7.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-svelte": "^2.19.2",
+		"eslint-plugin-svelte": "^2.22.0",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.4",
+		"prettier-plugin-svelte": "^2.9.0",
 		"prettier-plugin-tailwindcss": "^0.2.4",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.4",
-		"svelte-preprocess": "^5.0.1",
+		"svelte": "^3.57.0",
+		"svelte-check": "^3.1.4",
+		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.2.7",
 		"typescript": "^4.9.5"
 	},
