--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node scripts/buildNumber.cjs alpha true && tauri dev",
-		"dev": "node scripts/server.js",
+		"dev": "node scripts/buildNumber.cjs alpha true && tauri dev",
+		"server": "node scripts/server.js",
 		"build": "node scripts/buildNumber.cjs release false && tauri build",
 		"build:alpha": "node scripts/buildNumber.cjs alpha false && tauri build",
 		"build:beta": "node scripts/buildNumber.cjs beta false && tauri build",
@@ -19,43 +19,40 @@
 	},
 	"devDependencies": {
 		"@baileyherbert/tinro": "^1.0.0",
-		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-		"@esbuild-plugins/node-modules-polyfill": "^0.1.4",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tauri-apps/api": "^1.2.0",
 		"@tauri-apps/cli": "^1.2.3",
 		"@types/node": "^18.14.6",
-		"@typescript-eslint/eslint-plugin": "^5.54.0",
-		"@typescript-eslint/parser": "^5.54.0",
-		"autoprefixer": "^10.4.13",
+		"@typescript-eslint/eslint-plugin": "^5.58.0",
+		"@typescript-eslint/parser": "^5.58.0",
+		"autoprefixer": "^10.4.14",
 		"esbuild": "^0.15.16",
 		"esbuild-plugin-copy": "^2.0.2",
 		"esbuild-plugin-replace": "^1.3.0",
 		"esbuild-style-plugin": "^1.6.1",
 		"esbuild-svelte": "^0.7.3",
-		"eslint": "^8.35.0",
+		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.7.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-svelte": "^2.22.0",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.4",
+		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.9.0",
 		"prettier-plugin-tailwindcss": "^0.2.4",
-		"svelte": "^3.57.0",
-		"svelte-check": "^3.1.4",
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.2.0",
 		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.2.7",
-		"typescript": "^4.9.5"
+		"tailwindcss": "^3.3.1",
+		"typescript": "^5.0.4"
 	},
 	"dependencies": {
 		"@undecaf/barcode-detector-polyfill": "^0.9.15",
 		"@undecaf/zbar-wasm": "^0.9.12",
 		"otpauth": "^8.0.3",
-		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4",
-		"ua-parser-js": "^1.0.33"
+		"ua-parser-js": "^1.0.35"
 	}
 }
