--- a/.github/workflows/alpha-artifacts.yml
+++ b/.github/workflows/alpha-artifacts.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
       - name: Install app dependencies and build it
-        if: matrix.NAME == 'linux' || matrix.NAME == 'linux'
+        if: matrix.NAME == 'linux' || matrix.NAME == 'windows'
         run: npm ci && npm run build:alpha
       - name: Install app dependencies and build it
         if: matrix.NAME == 'mac'
