--- a/package.json
+++ b/package.json
@@ -1,57 +1,59 @@
 {
 	"name": "authme",
-	"version": "4.0.3",
+	"version": "4.1.0",
 	"description": "Simple cross-platform two-factor (2FA) authenticator app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node scripts/buildNumber.cjs alpha true && tauri dev",
-		"dev": "node scripts/server.js",
+		"dev": "node scripts/buildNumber.cjs alpha true && tauri dev",
+		"server": "node scripts/server.js",
 		"build": "node scripts/buildNumber.cjs release false && tauri build",
 		"build:alpha": "node scripts/buildNumber.cjs alpha false && tauri build",
 		"build:beta": "node scripts/buildNumber.cjs beta false && tauri build",
 		"build:bundle": "node scripts/build.js",
 		"setup": "node scripts/buildNumber.cjs alpha false && node scripts/build.js",
 		"rename": "node scripts/rename.js",
-		"check": "svelte-check && tsc --noEmit && eslint ."
+		"check": "svelte-check && tsc --noEmit && eslint .",
+		"tauri": "tauri"
 	},
 	"devDependencies": {
 		"@baileyherbert/tinro": "^1.0.0",
-		"@esbuild-plugins/node-globals-polyfill": "^0.1.1",
-		"@esbuild-plugins/node-modules-polyfill": "^0.1.4",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"@tailwindcss/forms": "^0.5.3",
-		"@tauri-apps/api": "^1.2.0",
-		"@tauri-apps/cli": "^1.2.3",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.49.0",
-		"@typescript-eslint/parser": "^5.49.0",
-		"autoprefixer": "^10.4.13",
+		"@tauri-apps/api": "^1.3.0",
+		"@tauri-apps/cli": "^1.3.0",
+		"@types/node": "^18.14.6",
+		"@typescript-eslint/eslint-plugin": "^5.58.0",
+		"@typescript-eslint/parser": "^5.58.0",
+		"autoprefixer": "^10.4.14",
 		"esbuild": "^0.15.16",
-		"esbuild-style-plugin": "^1.6.1",
+		"esbuild-plugin-copy": "^2.0.2",
+		"esbuild-plugin-replace": "^1.3.0",
+		"esbuild-style-plugin": "^1.6.2",
 		"esbuild-svelte": "^0.7.3",
-		"eslint": "^8.32.0",
-		"eslint-config-prettier": "^8.6.0",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.7.0",
 		"eslint-config-standard": "^17.0.0-1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-svelte": "^2.15.0",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.3",
-		"prettier-plugin-tailwindcss": "^0.2.1",
-		"svelte": "^3.55.1",
-		"svelte-check": "^3.0.3",
-		"svelte-preprocess": "^5.0.1",
-		"tailwindcss": "^3.2.4",
-		"typescript": "^4.9.4"
+		"eslint-plugin-svelte": "^2.22.0",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.9.0",
+		"prettier-plugin-tailwindcss": "^0.2.8",
+		"svelte": "^3.59.0",
+		"svelte-check": "^3.3.1",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.2",
+		"typescript": "^5.0.4"
 	},
 	"dependencies": {
+		"@undecaf/barcode-detector-polyfill": "^0.9.16",
+		"@undecaf/zbar-wasm": "^0.9.13",
 		"otpauth": "^8.0.3",
-		"protocol-buffers": "^5.0.0",
-		"qrcode-decoder": "^0.2.2",
 		"qrcode-generator": "^1.4.4",
-		"ua-parser-js": "^1.0.33"
+		"ua-parser-js": "^1.0.35"
 	}
 }
