--- a/.github/workflows/alpha-artifacts.yml
+++ b/.github/workflows/alpha-artifacts.yml
@@ -24,17 +24,23 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-      - name: Install rust stable
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      - name: Rust setup
+        uses: dtolnay/rust-toolchain@stable
+      - name: "Apple silicon target"
+        if: matrix.NAME == 'mac'
+        run : |
+          rustup target add aarch64-apple-darwin
       - name: Install webkit2gtk (ubuntu only)
         if: matrix.NAME == 'linux'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
       - name: Install app dependencies and build it
+        if: matrix.NAME == 'linux' || matrix.NAME == 'windows'
         run: npm ci && npm run build:alpha
+      - name: Install app dependencies and build it
+        if: matrix.NAME == 'mac'
+        run: npm ci && npm run build:alpha -- --target universal-apple-darwin
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
