--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,21 +12,22 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2.0", features = [] }
+tauri-build = { version = "1.3.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2.0", features = ["api-all", "system-tray", "updater"] }
+tauri = { version = "1.3.0", features = ["api-all", "system-tray", "updater"] }
 auto-launch = "0.3.0"
-sysinfo = "0.25.3"
+sysinfo = "0.28.4"
 argon2 = "0.4"
 rand_core = { version = "0.6", features = ["std"] }
 magic-crypt = "3.1.10"
 keyring = "1.2.0"
 once_cell = "1.15.0"
-tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/tauri-plugin-single-instance" }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace" }
 rand = "0.8.5"
+google_authenticator_converter = { path = "crates/google_authenticator_converter" }
 
 [features]
 # by default Tauri runs in production mode
@@ -41,3 +42,9 @@ panic = "abort" # Strip expensive panic clean-up logic
 codegen-units = 1 # Compile crates one after another so the compiler can optimize better
 lto = true # Enables link to optimizations
 opt-level = "s" # Optimize for binary size
+
+[workspace]
+
+members = [
+    "crates/*",
+]
