--- a/package.json
+++ b/package.json
@@ -33,16 +33,15 @@
 		"esbuild-plugin-replace": "^1.3.0",
 		"esbuild-style-plugin": "^1.6.2",
 		"esbuild-svelte": "^0.7.3",
-		"eslint": "^8.40.0",
+		"eslint": "^8.43.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-config-standard": "^17.0.0-1",
-		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-config-standard": "^17.1.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-svelte": "^2.28.0",
+		"eslint-plugin-svelte": "^2.31.0",
 		"postcss": "^8.4.23",
 		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.0",
-		"prettier-plugin-tailwindcss": "^0.2.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.3.2",
 		"svelte-preprocess": "^5.0.3",
