--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "authme",
-	"version": "4.1.0",
+	"version": "4.2.0",
 	"description": "Simple cross-platform two-factor (2FA) authenticator app for desktop.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -21,33 +21,32 @@
 	"devDependencies": {
 		"@baileyherbert/tinro": "^1.0.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tauri-apps/api": "^1.3.0",
-		"@tauri-apps/cli": "^1.3.0",
-		"@types/node": "^18.14.6",
-		"@typescript-eslint/eslint-plugin": "^5.58.0",
-		"@typescript-eslint/parser": "^5.58.0",
-		"autoprefixer": "^10.4.14",
+		"@tailwindcss/forms": "^0.5.6",
+		"@tauri-apps/api": "^1.4.0",
+		"@tauri-apps/cli": "^1.4.0",
+		"@types/node": "^20.6.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.5",
+		"@typescript-eslint/parser": "^5.59.5",
+		"autoprefixer": "^10.4.15",
 		"esbuild": "^0.15.16",
 		"esbuild-plugin-copy": "^2.0.2",
 		"esbuild-plugin-replace": "^1.3.0",
 		"esbuild-style-plugin": "^1.6.2",
 		"esbuild-svelte": "^0.7.3",
-		"eslint": "^8.40.0",
-		"eslint-config-prettier": "^8.7.0",
-		"eslint-config-standard": "^17.0.0-1",
-		"eslint-plugin-prettier": "^4.0.0",
+		"eslint": "^8.49.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-standard": "^17.1.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-svelte": "^2.22.0",
-		"postcss": "^8.4.23",
+		"eslint-plugin-svelte": "^2.31.0",
+		"postcss": "^8.4.29",
 		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.9.0",
-		"prettier-plugin-tailwindcss": "^0.2.8",
-		"svelte": "^3.59.0",
-		"svelte-check": "^3.3.1",
-		"svelte-preprocess": "^5.0.3",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^5.0.4"
+		"prettier-plugin-svelte": "^2.10.1",
+		"prettier-plugin-tailwindcss": "^0.3.0",
+		"svelte": "^3.59.1",
+		"svelte-check": "^3.5.1",
+		"svelte-preprocess": "^5.0.4",
+		"tailwindcss": "^3.3.3",
+		"typescript": "^5.2.2"
 	},
 	"dependencies": {
 		"@undecaf/barcode-detector-polyfill": "^0.9.16",
