--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -1,8 +1,8 @@
 name: Release Artifacts
 on:
     push:
-        branches:
-            - main
+        tags:
+            - "*"
 jobs:
     test-tauri:
         strategy:
@@ -26,7 +26,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  cache: 'npm'
+                  cache: "npm"
 
             - name: Rust setup
               uses: dtolnay/rust-toolchain@stable
@@ -36,6 +36,11 @@ jobs:
               with:
                   workspaces: "./core -> target"
 
+            - name: "Apple silicon target"
+              if: matrix.NAME == 'mac'
+              run: |
+                  rustup target add aarch64-apple-darwin
+
             - name: Install webkit2gtk (ubuntu only)
               if: matrix.NAME == 'linux'
               run: |
@@ -43,7 +48,12 @@ jobs:
                   sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
 
             - name: Install app dependencies and build it
-              run: npm ci && npm run build
+              if: matrix.NAME == 'linux' || matrix.NAME == 'windows'
+              run: npm ci && npm run build:alpha
+    
+            - name: Install app dependencies and build it
+              if: matrix.NAME == 'mac'
+              run: npm ci && npm run build:alpha -- --target universal-apple-darwin
 
             - uses: tauri-apps/tauri-action@v0
               env:
