--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -1,8 +1,8 @@
 name: Release Artifacts
 on:
     push:
-        branches:
-            - main
+        tags:
+            - "*"
 jobs:
     test-tauri:
         strategy:
@@ -19,25 +19,42 @@ jobs:
         env:
             TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
         steps:
-            - uses: actions/checkout@v3
+            - name: Checkout repository
+              uses: actions/checkout@v4
+
             - name: Setup node
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
-                  node-version: 16
-            - name: Install rust stable
-              uses: actions-rs/toolchain@v1
+                  node-version: 20
+                  cache: "npm"
+
+            - name: Rust setup
+              uses: dtolnay/rust-toolchain@stable
+
+            - name: Rust cache
+              uses: swatinem/rust-cache@v2
               with:
-                  toolchain: stable
+                  workspaces: "./core -> target"
+
+            - name: "Apple silicon target"
+              if: matrix.NAME == 'mac'
+              run: |
+                  rustup target add aarch64-apple-darwin
+
             - name: Install webkit2gtk (ubuntu only)
               if: matrix.NAME == 'linux'
               run: |
                   sudo apt-get update
                   sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
+
             - name: Install app dependencies and build it
-              run: npm ci && npm run build
-            - uses: tauri-apps/tauri-action@v0
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              if: matrix.NAME == 'linux' || matrix.NAME == 'windows'
+              run: npm ci && npm run build:release
+    
+            - name: Install app dependencies and build it
+              if: matrix.NAME == 'mac'
+              run: npm ci && npm run build:release -- --target universal-apple-darwin
+
             - name: Remove useless folders
               run: |
                   rm -rf core/target/release/build
@@ -50,7 +67,6 @@ jobs:
               id: get_latest_release
               with:
                   route: GET /repos/:repository/releases?per_page=1
-                  repository: ${{ github.repository }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -105,6 +121,7 @@ jobs:
                   asset_path: ./core/target/release/upload/authme-${{steps.version.outputs.prop}}-linux-x64.appimage
                   asset_name: authme-${{steps.version.outputs.prop}}-linux-x64.appimage
                   asset_content_type: application/octet-stream
+
             - name: Upload the linux installer asset
               if: runner.os == 'Linux'
               uses: actions/upload-release-asset@v1.0.2
