--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,13 +19,13 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.0", features = ["api-all", "system-tray", "updater"] }
 auto-launch = "0.3.0"
-sysinfo = "0.28.4"
+sysinfo = "0.30.5"
 argon2 = "0.4"
 rand_core = { version = "0.6", features = ["std"] }
 magic-crypt = "3.1.10"
 keyring = "1.2.0"
 once_cell = "1.15.0"
-tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace" }
+tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 rand = "0.8.5"
 google_authenticator_converter = { path = "crates/google_authenticator_converter" }
 
