--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -67,6 +67,7 @@ jobs:
               id: get_latest_release
               with:
                   route: GET /repos/:repository/releases?per_page=1
+                  repository: ${{ github.repository }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
