--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -10,7 +10,7 @@ jobs:
             matrix:
                 include:
                     - os: macos-latest
-                      NAME: mac
+                      NAME: macos
                     - os: ubuntu-latest
                       NAME: linux
                     - os: windows-latest
@@ -37,22 +37,23 @@ jobs:
                   workspaces: "./core -> target"
 
             - name: "Apple silicon target"
-              if: matrix.NAME == 'mac'
+              if: runner.os == 'macOS'
               run: |
                   rustup target add aarch64-apple-darwin
+                  rustup target add x86_64-apple-darwin
 
             - name: Install webkit2gtk (ubuntu only)
-              if: matrix.NAME == 'linux'
+              if: runner.os == 'Linux'
               run: |
                   sudo apt-get update
                   sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
 
             - name: Install app dependencies and build it
-              if: matrix.NAME == 'linux' || matrix.NAME == 'windows'
+              if: runner.os == 'Linux' || runner.os == 'Windows'
               run: npm ci && npm run build
     
             - name: Install app dependencies and build it
-              if: matrix.NAME == 'mac'
+              if: runner.os == 'macOS'
               run: npm ci && npm run build -- --target universal-apple-darwin
 
             - name: Remove useless folders
